--- a/cn-research.html
+++ b/cn-research.html
@@ -665,7 +665,7 @@
             <hr class="hidden-mobile">
 
             <div class="doc-section" id="publications">
-                <h3>学术论文 <small><small>(引用数: <span id="citation-number-container">280+</span>)</small></small></h3>
+                <h3>学术论文 <small><small>(引用数: <span id="citation-number-container">295</span>)</small></small></h3>
                 <!---
         <ul class="square">
           <li><strong>能源经济 / 政策 / 战略: </strong><br>
