--- a/cn.html
+++ b/cn.html
@@ -221,10 +221,12 @@
                   class='blue'>领英</span></a></li>
             <li><a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en" target="_blank"
                 target="_blank"><span class='blue'>谷歌学术</span></a></li>
-
             <li><a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span class='blue'>h.xu [at]
                   tum.de</span></a></li>
             <p>____</p>
+            <!-- <li><a href="cn.html" target="_blank" ><span
+              class='blue'>A</span></a> / <a href="https://life.h-xu.com" target="_blank" >B</a></li>
+            <p>____</p> -->
             <p></p>
             
             <img src="images/logo.png" width="45" />
@@ -315,8 +317,6 @@
 
 
       </div>
-
-
 
 
       <p class="hidden-mobile"></p>
