--- a/cn-research.html
+++ b/cn-research.html
@@ -665,7 +665,7 @@
             <hr class="hidden-mobile">
 
             <div class="doc-section" id="publications">
-                <h3>学术论文 <small><small>(引用数: <span id="citation-number-container">295</span>)</small></small></h3>
+                <h3>学术论文 <small><small>(引用数: <span id="citation-number-container">295+</span>)</small></small></h3>
                 <!---
         <ul class="square">
           <li><strong>能源经济 / 政策 / 战略: </strong><br>
@@ -960,7 +960,7 @@
             <hr class="hidden-mobile">
 
             <div class="doc-section" id="dissertations">
-                <h3>学位论文 <small><small>(浏览量: 2000+)</small></small></h3>
+                <h3>学位论文 <small><small>(浏览量: 2100+)</small></small></h3>
                 <ol>
                     <li>
                         <strong>H. Xu</strong> [ETH], Prof. T. J. Schmidt (导师/ETH), Prof. M. Stampanoni (合作导师/ETH), Dr.
