--- a/cn-resume.html
+++ b/cn-resume.html
@@ -366,7 +366,7 @@
             <option value="jp.html">日本語</option>
             <option value="kr.html">한국어</option>
             <option value="de.html">Deutsch</option>
-            <option value="en.html">English</option>
+            <option value="en-resume.html">English</option>
             <option value="es.html">Español</option>
             <option value="fr.html">Français</option>
             <option value="it.html">Italiano</option>
@@ -447,7 +447,7 @@
             <option value="jp.html">🇯🇵 日本語</option>
             <option value="kr.html">🇰🇷 한국어</option>
             <option value="de.html">🇩🇪 Deutsch</option>
-            <option value="en.html">🇬🇧 English</option>
+            <option value="en-resume.html">🇬🇧 English</option>
             <option value="es.html">🇪🇸 Español</option>
             <option value="fr.html">🇫🇷 Français</option>
             <option value="it.html">🇮🇹 Italiano</option>
@@ -842,8 +842,8 @@
             <li><strong>知乎</strong>: <a href="https://www.zhihu.com/people/dr.of.nothing" target="_blank"
                     target="_blank"><span class='blue'>zhihu.com/people/dr.of.nothing</span></a> (关注者:
                 13500+)<br></li>
-            <li><strong>摄影</strong>: <a href="https://photo.h-xu.com/" target="_blank" target="_blank"><span
-                        class='blue'>photo.h-xu.com</span></a> (X-graphy)<br></li>
+            <!-- <li><strong>摄影</strong>: <a href="https://photo.h-xu.com/" target="_blank" target="_blank"><span
+                        class='blue'>photo.h-xu.com</span></a> (X-graphy)<br></li> -->
 
             <br>
             <a href="https://info.flagcounter.com/D897" target="_blank">
