--- a/cn-activities.html
+++ b/cn-activities.html
@@ -437,7 +437,7 @@
             <option value="jp.html">日本語</option>
             <option value="kr.html">한국어</option>
             <option value="de.html">Deutsch</option>
-            <option value="en.html">English</option>
+            <option value="en-activities.html">English</option>
             <option value="es.html">Español</option>
             <option value="fr.html">Français</option>
             <option value="it.html">Italiano</option>
@@ -518,7 +518,7 @@
             <option value="jp.html">🇯🇵 日本語</option>
             <option value="kr.html">🇰🇷 한국어</option>
             <option value="de.html">🇩🇪 Deutsch</option>
-            <option value="en.html">🇬🇧 English</option>
+            <option value="en-activities.html">🇬🇧 English</option>
             <option value="es.html">🇪🇸 Español</option>
             <option value="fr.html">🇫🇷 Français</option>
             <option value="it.html">🇮🇹 Italiano</option>
@@ -957,6 +957,243 @@
             <div class="mySlides fade">
               <div class="numbertext"></div>
               <div class="image-container">
+                <img class="display-mobile" src="images/formal/1.jpg" alt="Image"  style="width: 100%; height: 60vh; object-fit: cover;">
+                <img class="hidden-mobile" src="images/formal/1.jpg" style="width: 100%; height: 55vh; object-fit: cover;">
+                <div class="text" style="display: none;" id="img-title-1">联合国气候变化大会 🇩🇪 德国波恩</div>
+              </div>
+              
+              <div class="text"></div>
+            </div>
+            <div class="mySlides fade">
+              <div class="numbertext"></div>
+              <div class="image-container">
+              <img class="display-mobile" src="images/formal/2.jpg" style="width: 100%; height: 60vh; object-fit: cover;">
+              <img class="hidden-mobile" src="images/formal/2.jpg" style="width: 100%; height: 55vh; object-fit: cover;">
+              <div class="text" style="display: none;" id="img-title-2">联合国万国宫 🇨🇭 瑞士日内瓦</div>
+              </div>
+            </div>
+            <div class="mySlides fade">
+              <div class="numbertext"></div>
+              <div class="image-container">
+              <img class="display-mobile" src="images/formal/3.jpg" style="width: 100%; height: 60vh; object-fit: cover;">
+              <img class="hidden-mobile" src="images/formal/3.jpg" style="width: 100%; height: 55vh; object-fit: cover;">
+              <div class="text" style="display: none;" id="img-title-3">联合国工业发展组织 🇦🇹 奥地利维也纳</div>
+            </div>
+            </div>
+            <div class="mySlides fade">
+              <div class="numbertext"></div>
+              <div class="image-container">
+              <img class="display-mobile" src="images/formal/4.jpg" style="width: 100%; height: 60vh; object-fit: cover;">
+              <img class="hidden-mobile" src="images/formal/4.jpg" style="width: 100%; height: 55vh; object-fit: cover;">
+              <div class="text"></div>
+              <div class="text" style="display: none;" id="img-title-4">ETH博士毕业典礼 🇨🇭 瑞士苏黎世</div>
+            </div>
+            </div>
+            <div class="mySlides fade">
+              <div class="numbertext"></div>
+              <div class="image-container">
+              <img class="display-mobile" src="images/formal/5.jpg" style="width: 100%; height: 60vh; object-fit: cover;">
+              <img class="hidden-mobile" src="images/formal/5.jpg" style="width: 100%; height: 55vh; object-fit: cover;">
+              <div class="text"></div>
+              <div class="text" style="display: none;" id="img-title-5">圣加仑国际经济论坛 🇨🇭 瑞士圣加仑</div>
+            </div>
+            </div>
+
+            <div class="mySlides fade">
+              <div class="numbertext"></div>
+              <div class="image-container">
+              <img class="display-mobile" src="images/formal/6.jpg" style="width: 100%; height: 60vh; object-fit: cover;">
+              <img class="hidden-mobile" src="images/formal/6.jpg" style="width: 100%; height: 55vh; object-fit: cover;">
+              <div class="text"></div>
+              <div class="text" style="display: none;" id="img-title-6">联合国气候变化大会 🇺🇳 德国波恩</div>
+            </div>
+            </div>
+            <div class="mySlides fade">
+              <div class="numbertext"></div>
+              <div class="image-container">
+              <img class="display-mobile" src="images/formal/7.jpg" style="width: 100%; height: 60vh; object-fit: cover;">
+              <img class="hidden-mobile" src="images/formal/7.jpg" style="width: 100%; height: 55vh; object-fit: cover;">
+              <div class="text"></div>
+              <div class="text" style="display: none;" id="img-title-7">欧洲核子中心CERN 🇨🇭 瑞士日内瓦</div>
+            </div>
+            </div>
+            <div class="mySlides fade">
+              <div class="numbertext"></div>
+              <div class="image-container">
+              <img class="display-mobile" src="images/formal/8.jpg" style="width: 100%; height: 60vh; object-fit: cover;">
+              <img class="hidden-mobile" src="images/formal/8.jpg" style="width: 100%; height: 55vh; object-fit: cover;">
+              <div class="text"></div>
+              <div class="text" style="display: none;" id="img-title-8">瑞士同步辐射光源 🇨🇭 瑞士菲利根</div>
+            </div>
+            </div>
+            <div class="mySlides fade">
+              <div class="numbertext"></div>
+              <div class="image-container">
+              <img class="display-mobile" src="images/formal/9.jpg" style="width: 100%; height: 60vh; object-fit: cover;">
+              <img class="hidden-mobile" src="images/formal/9.jpg" style="width: 100%; height: 55vh; object-fit: cover;">
+              <div class="text"></div>
+              <div class="text" style="display: none;" id="img-title-9">联合国气候变化大会 🇺🇳 COP28 UAE</div>
+            </div>
+            </div>
+            <div class="mySlides fade">
+              <div class="numbertext"></div>
+              <div class="image-container">
+              <img class="display-mobile" src="images/formal/10.jpg" style="width: 100%; height: 60vh; object-fit: cover;">
+              <img class="hidden-mobile" src="images/formal/10.jpg" style="width: 100%; height: 55vh; object-fit: cover;">
+              <div class="text"></div>
+              <div class="text" style="display: none;" id="img-title-10">国际燃料电池基础研发会议 🇫🇷 法国南特</div>
+            </div>
+            </div>
+            <div class="mySlides fade">
+              <div class="numbertext"></div>
+              <div class="image-container">
+              <img class="display-mobile" src="images/formal/11.jpg" style="width: 100%; height: 60vh; object-fit: cover;">
+              <img class="hidden-mobile" src="images/formal/11.jpg" style="width: 100%; height: 55vh; object-fit: cover;">
+              <div class="text"></div>
+              <div class="text" style="display: none;" id="img-title-11">联合国气候变化大会 🇺🇳 德国波恩</div>
+            </div>
+            </div>
+            <div class="mySlides fade">
+              <div class="numbertext"></div>
+              <div class="image-container">
+              <img class="display-mobile" src="images/formal/12.jpg" style="width: 100%; height: 60vh; object-fit: cover;">
+              <img class="hidden-mobile" src="images/formal/12.jpg" style="width: 100%; height: 55vh; object-fit: cover;">
+              <div class="text"></div>
+              <div class="text" style="display: none;" id="img-title-12">国际电化学学会会议 🇮🇹 意大利博洛尼亚</div>
+            </div>
+            </div>
+            <div class="mySlides fade">
+              <div class="numbertext"></div>
+              <div class="image-container">
+              <img class="display-mobile" src="images/formal/13.jpg" style="width: 100%; height: 60vh; object-fit: cover;">
+              <img class="hidden-mobile" src="images/formal/13.jpg" style="width: 100%; height: 55vh; object-fit: cover;">
+              <div class="text"></div>
+              <div class="text" style="display: none;" id="img-title-13">联合国波恩驻地 🇺🇳 德国波恩</div>     
+            </div>
+            </div>
+            <div class="mySlides fade">
+              <div class="numbertext"></div>
+              <div class="image-container">
+              <img class="display-mobile" src="images/formal/14.jpg" style="width: 100%; height: 60vh; object-fit: cover;">
+              <img class="hidden-mobile" src="images/formal/14.jpg" style="width: 100%; height: 55vh; object-fit: cover;">
+              <div class="text"></div>
+              <div class="text" style="display: none;" id="img-title-14">美国电化学学会年会 🇺🇸 美国亚特兰大</div>
+            </div>
+            </div>
+
+            <div class="mySlides fade">
+              <div class="numbertext"></div>
+              <div class="image-container">
+              <img class="display-mobile" src="images/formal/15.jpg" style="width: 100%; height: 60vh; object-fit: cover;">
+              <img class="hidden-mobile" src="images/formal/15.jpg" style="width: 100%; height: 55vh; object-fit: cover;">
+              <div class="text"></div>
+              <div class="text" style="display: none;" id="img-title-15">国际能源与气候论坛 🇦🇹 奥地利维也纳</div>
+            </div>
+            </div>
+            <div class="mySlides fade">
+              <div class="numbertext"></div>
+              <div class="image-container">
+              <img class="display-mobile" src="images/formal/16.jpg" style="width: 100%; height: 60vh; object-fit: cover;">
+              <img class="hidden-mobile" src="images/formal/16.jpg" style="width: 100%; height: 55vh; object-fit: cover;">
+              <div class="text"></div>
+              <div class="text" style="display: none;" id="img-title-16">清华苏世民薛澜院长合影 🇨🇭 瑞士圣加仑</div>   
+            </div>
+            </div>
+            <div class="mySlides fade">
+              <div class="numbertext"></div>
+              <div class="image-container">
+              <img class="display-mobile" src="images/formal/17.jpg" style="width: 100%; height: 60vh; object-fit: cover;">
+              <img class="hidden-mobile" src="images/formal/17.jpg" style="width: 100%; height: 55vh; object-fit: cover;">
+              <div class="text"></div>
+              <div class="text" style="display: none;" id="img-title-17">卢森堡商会 🇱🇺 卢森堡</div>
+            </div>
+            </div>
+            <div class="mySlides fade">
+              <div class="numbertext"></div>
+              <div class="image-container">
+              <img class="display-mobile" src="images/formal/18.jpg" style="width: 100%; height: 60vh; object-fit: cover;">
+              <img class="hidden-mobile" src="images/formal/18.jpg" style="width: 100%; height: 55vh; object-fit: cover;">
+              <div class="text"></div>
+              <div class="text" style="display: none;" id="img-title-18">ETH博士毕业典礼 🇨🇭 瑞士苏黎世</div>
+            </div>
+            </div>
+            <div class="mySlides fade">
+              <div class="numbertext"></div>
+              <div class="image-container">
+              <img class="display-mobile" src="images/formal/19.jpg" style="width: 100%; height: 60vh; object-fit: cover;">
+              <img class="hidden-mobile" src="images/formal/19.jpg" style="width: 100%; height: 55vh; object-fit: cover;">
+              <div class="text"></div>
+              <div class="text" style="display: none;" id="img-title-19">🇪🇺 硕士毕业答辩 🇨🇭 瑞士瑞吉山 </div>
+            </div>
+            </div>
+            <div class="mySlides fade">
+              <div class="numbertext"></div>
+              <div class="image-container">
+              <img class="display-mobile" src="images/formal/20.jpg" style="width: 100%; height: 60vh; object-fit: cover;">
+              <img class="hidden-mobile" src="images/formal/20.jpg" style="width: 100%; height: 55vh; object-fit: cover;">
+              <div class="text"></div>
+              <div class="text" style="display: none;" id="img-title-20">德国物理学会年会 🇩🇪 德国雷根斯堡</div>
+            </div>
+            </div>
+            <div class="mySlides fade">
+              <div class="numbertext"></div>
+              <div class="image-container">
+              <img class="display-mobile" src="images/formal/21.jpg" style="width: 100%; height: 60vh; object-fit: cover;">
+              <img class="hidden-mobile" src="images/formal/21.jpg" style="width: 100%; height: 55vh; object-fit: cover;">
+              <div class="text"></div>
+              <div class="text" style="display: none;" id="img-title-21">联合国欧经委专家小组会议 🇨🇭 瑞士日内瓦</div>
+            </div>
+            </div>
+
+            <div class="mySlides fade">
+              <div class="numbertext"></div>
+              <div class="image-container">
+              <img class="display-mobile" src="images/formal/22.jpg" style="width: 100%; height: 60vh; object-fit: cover;">
+              <img class="hidden-mobile" src="images/formal/22.jpg" style="width: 100%; height: 55vh; object-fit: cover;">
+              <div class="text"></div>
+              <div class="text" style="display: none;" id="img-title-22">东元绿色科技竞赛 🇨🇳 中国台北</div>
+            </div>
+            </div>
+            <div class="mySlides fade">
+              <div class="numbertext"></div>
+              <div class="image-container"></div>
+              <img class="display-mobile" src="images/formal/23.jpg" style="width: 100%; height: 60vh; object-fit: cover;">
+              <img class="hidden-mobile" src="images/formal/23.jpg" style="width: 100%; height: 55vh; object-fit: cover;">
+              <div class="text"></div>
+              <div class="text" style="display: none;" id="img-title-23">本科毕业典礼 🇨🇳 中国北京</div>
+            </div>
+            <div class="mySlides fade">
+              <div class="numbertext"></div>
+              <div class="image-container">
+              <img class="display-mobile" src="images/formal/24.jpg" style="width: 100%; height: 60vh; object-fit: cover;">
+              <img class="hidden-mobile" src="images/formal/24.jpg" style="width: 100%; height: 55vh; object-fit: cover;">
+              <div class="text"></div>
+              <div class="text" style="display: none;" id="img-title-24">APEC青年创业家峰会 🇨🇳 中国北京</div>
+            </div>
+            </div>
+            <div class="mySlides fade">
+              <div class="numbertext"></div>
+              <div class="image-container">
+              <img class="display-mobile" src="images/formal/25.jpg" style="width: 100%; height: 60vh; object-fit: cover;">
+              <img class="hidden-mobile" src="images/formal/25.jpg" style="width: 100%; height: 55vh; object-fit: cover;">
+              <div class="text"></div>
+              <div class="text" style="display: none;" id="img-title-25">本科毕业班级合影 🇨🇳 中国北京</div>
+            </div>
+            </div>
+            <div class="mySlides fade">
+              <div class="numbertext"></div>
+              <div class="image-container">
+              <img class="display-mobile" src="images/formal/26.jpg" style="width: 100%; height: 60vh; object-fit: cover;">
+              <img class="hidden-mobile" src="images/formal/26.jpg" style="width: 100%; height: 55vh; object-fit: cover;">
+              <div class="text"></div>
+              <div class="text" style="display: none;" id="img-title-26">本科毕业典礼 🇨🇳 中国北京 </div>
+            </div>
+            </div>
+
+
+            <!-- <div class="mySlides fade">
+              <div class="numbertext"></div>
+              <div class="image-container">
                 <img class="display-mobile" src="images/gallery/1.jpg" alt="Image"  style="width: 100%; height: 60vh; object-fit: cover;">
                 <img class="hidden-mobile" src="images/gallery/1-1.jpg" style="width: 100%; height: 55vh; object-fit: cover;">
                 <div class="text" style="display: none;" id="img-title-1">马略卡岛/海角灯塔 🇪🇸 西班牙</div>
@@ -1230,7 +1467,7 @@
               <div class="text"></div>
               <div class="text" style="display: none;" id="img-title-31">芝加哥 🇺🇸 美国</div>
             </div>
-            </div>
+            </div> -->
     
             <a class="prev" onclick="plusSlides(-1)">❮</a>
             <a class="next" onclick="plusSlides(1)">❯</a>
@@ -1264,11 +1501,6 @@
             <span class="dot" onclick="currentSlide(24)"></span>
             <span class="dot" onclick="currentSlide(25)"></span>
             <span class="dot" onclick="currentSlide(26)"></span>
-            <span class="dot" onclick="currentSlide(27)"></span>
-            <span class="dot" onclick="currentSlide(28)"></span>
-            <span class="dot" onclick="currentSlide(29)"></span>
-            <span class="dot" onclick="currentSlide(30)"></span>
-            <span class="dot" onclick="currentSlide(31)"></span>
           </div>
   
   
