--- a/cn-research.html
+++ b/cn-research.html
@@ -436,7 +436,7 @@
                         <option value="jp.html">日本語</option>
                         <option value="kr.html">한국어</option>
                         <option value="de.html">Deutsch</option>
-                        <option value="en.html">English</option>
+                        <option value="en-research.html">English</option>
                         <option value="es.html">Español</option>
                         <option value="fr.html">Français</option>
                         <option value="it.html">Italiano</option>
@@ -517,7 +517,7 @@
                         <option value="jp.html">🇯🇵 日本語</option>
                         <option value="kr.html">🇰🇷 한국어</option>
                         <option value="de.html">🇩🇪 Deutsch</option>
-                        <option value="en.html">🇬🇧 English</option>
+                        <option value="en-research.html">🇬🇧 English</option>
                         <option value="es.html">🇪🇸 Español</option>
                         <option value="fr.html">🇫🇷 Français</option>
                         <option value="it.html">🇮🇹 Italiano</option>
@@ -536,10 +536,10 @@
 
                 <ul class="square">
                     <li><strong>新能源技术</strong>、氢能/光伏/锂电、碳中和、低碳智能交通<br>
-                    <li><strong>能源经济学</strong>、能源政策、ESG投资、数字可持续发展<br>
+                    <!-- <li><strong>能源经济学</strong>、能源政策、ESG投资、数字可持续发展<br> -->
                     <li><strong>计算机成像</strong>、X射线技术、图像处理、计算机视觉 <br>
                     <li><strong>功能新材料</strong>、半导体、高分子、MOFs、3D打印、材料LCA<br>
-                    <li><strong>股票研究</strong>、大数据分析、行业研究、商业分析<br>
+                    <!-- <li><strong>股票研究</strong>、大数据分析、行业研究、商业分析<br> -->
 
                 </ul>
 
@@ -1224,8 +1224,8 @@
                     <li><strong>知乎</strong>: <a href="https://www.zhihu.com/people/dr.of.nothing" target="_blank"
                             target="_blank"><span class='blue'>zhihu.com/people/dr.of.nothing</span></a> (关注者:
                         13500+)<br></li>
-                    <li><strong>摄影</strong>: <a href="https://photo.h-xu.com/" target="_blank" target="_blank"><span
-                                class='blue'>photo.h-xu.com</span></a> (X-graphy)<br></li>
+                    <!-- <li><strong>摄影</strong>: <a href="https://photo.h-xu.com/" target="_blank" target="_blank"><span
+                                class='blue'>photo.h-xu.com</span></a> (X-graphy)<br></li> -->
 
                     <br>
                     <a href="https://info.flagcounter.com/D897" target="_blank">
