--- a/cn.html
+++ b/cn.html
@@ -453,8 +453,7 @@
         </p>
 
         <p align="justify">
-          他于2021年初获得<strong><a href="https://ethz.ch/en.html" target="_blank">苏黎世联邦理工大学</a></strong>博士学位, 师从瑞士能源研究竞争中心<strong><a
-            href="https://electrochemistry.ethz.ch/people/person-detail.html?persid=177926" target="_blank">托马斯·施密特主任/教授</a></strong></strong>。本硕博期间学术研究专注于<strong>碳中和/新能源</strong>领域，曾在<strong><a href="https://psi.ch" target="_blank">瑞士保罗谢尔研究院</a></strong>、<strong><a href="https://oxfordenergy.org" target="_blank">英国牛津能源研究所</a></strong>、<strong><a href="https://tum.de" target="_blank">德国慕尼黑工业大学</a></strong>、<strong><a href="https://ecoledesponts.fr/en" target="_blank">法国巴黎高科路桥大学</a></strong><strong>、<a href="https://xfel.eu" target="_blank">欧盟自由电子激光器</a></strong>等国际机构工作/实习，同时与<strong>日本丰田汽车</strong>、<strong>德国英飞凌半导体</strong>、<strong>德国科德宝集团</strong>等跨国公司开展深度研发合作。此外，他被<strong><a href="https://quantic.edu/mba" target="_blank">美国昆藤商学院</a></strong>全奖录取远程学习并颁发<strong>MBA</strong>学位，曾获桑坦德银行奖学金赴<strong><a href="https://www.jbs.cam.ac.uk/" target="_blank">剑桥大学商学院</a></strong>学习“绿色转型”企业管理课程，并曾在头部证券研究所 (A股&美股) 撰写个股深度/行业研究报告以及在双币基金 (种子轮➔A轮) 从事新能源赛道风投实践。
+          他于2021年初获得<strong><a href="https://ethz.ch/en.html" target="_blank">苏黎世联邦理工大学</a></strong>博士学位, 本硕博期间学术研究专注于<strong>碳中和/新能源</strong>领域，曾在<strong><a href="https://psi.ch" target="_blank">瑞士保罗谢尔研究院</a></strong>、<strong><a href="https://oxfordenergy.org" target="_blank">英国牛津能源研究所</a></strong>、<strong><a href="https://tum.de" target="_blank">德国慕尼黑工业大学</a></strong>、<strong><a href="https://ecoledesponts.fr/en" target="_blank">法国巴黎高科路桥大学</a></strong><strong>、<a href="https://xfel.eu" target="_blank">欧盟自由电子激光器</a></strong>等国际机构工作/实习，同时与<strong>日本丰田汽车</strong>、<strong>德国英飞凌半导体</strong>、<strong>德国科德宝集团</strong>等跨国公司开展深度研发合作。此外，他被<strong><a href="https://quantic.edu/mba" target="_blank">美国昆藤商学院</a></strong>全奖录取远程学习并颁发<strong>MBA</strong>学位，曾获桑坦德银行奖学金赴<strong><a href="https://www.jbs.cam.ac.uk/" target="_blank">剑桥大学商学院</a></strong>学习“绿色转型”企业管理课程，并曾在头部证券研究所 (A股&美股) 撰写个股深度/行业研究报告以及在双币基金 (种子轮➔A轮) 从事新能源赛道风投实践。
         </p>
 
         <p style="text-align:left;">
@@ -618,8 +617,8 @@
               target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a> (引用数: <span id="citation-count">290+</span>)<br></li>
           <li><strong>知乎</strong>: <a href="https://www.zhihu.com/people/dr.of.nothing" target="_blank"
               target="_blank"><span class='blue'>zhihu.com/people/dr.of.nothing</span></a> (关注者: 13700+)<br></li>
-          <li><strong>摄影</strong>: <a href="https://photo.h-xu.com/" target="_blank"
-                target="_blank"><span class='blue'>photo.h-xu.com</span></a> (X-graphy)<br></li>
+          <!-- <li><strong>摄影</strong>: <a href="https://photo.h-xu.com/" target="_blank"
+                target="_blank"><span class='blue'>photo.h-xu.com</span></a> (X-graphy)<br></li> -->
 
                 <br>
                 <a href="https://info.flagcounter.com/D897" target="_blank">
