--- a/cn-activities.html
+++ b/cn-activities.html
@@ -378,7 +378,7 @@
             <li><a href="cn-research.html">研究进展</a></li>
             <li><a href="cn-resume.html">简历</a></li>
             <li><a href="cn-activities.html"><span style="color: rgb(253, 93, 7);">兴趣爱好 ⏴</span></a></li>
-            <li><a href="#">&nbsp;• 演讲/主持</a></li>
+            <li><a href="#">&nbsp;• 演讲</a></li>
             <li><a href="#writing">&nbsp;• 写作</a></li>
             <li><a href="#visiting">&nbsp;• 参访</a></li>
             <li><a href="#travel">&nbsp;• 旅行</a></li>
@@ -932,7 +932,7 @@
       <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
       <h3 class="hidden-mobile">影像 <small><small>「<span id="subsection-title">以光之名</span>」</small></small></h3>
-      <h3 class="display-mobile">影像 <small><small>「<span>以光之名</span>」</small></small><br><small><small>▷ <span id="subsection-title-mobile">以光之名</span></small></small></h3>
+      <h3 class="display-mobile">影像 <small><small>「<span>会议/典礼</span>」</small></small><br><small><small><small>▷ <span id="subsection-title-mobile">会议/典礼</span></small></small></small></h3>
 
       <!-- <div class="doc-section hidden-mobile" id="photography">
           <div class="gallery-wrap">
@@ -1577,6 +1577,19 @@
         <!---<img class="hidden-mobile" src="images/flights.png" style="width:100%" alt="">
         <img class="display-mobile" src="images/flights.png" style="width:100%" alt="">
         --->
+      </div>
+
+
+      <hr class="display-mobile" style="width:113%">
+      <hr class="hidden-mobile">
+
+      <div class="doc-section" id="sports">
+        <h3>运动</h3>
+        <ul class="square">
+          <li>
+            <strong>骑行</strong>, <strong>徒步</strong>, <strong>雪山</strong>, <strong>乒乓球</strong><br>
+          </li>
+        </ul>
       </div>
 
       
