--- a/cn-activities.html
+++ b/cn-activities.html
@@ -1630,7 +1630,7 @@
             <div class="three-col-grid">
               <div class="grid-item">
                 <img src="images/sports/3.jpg" alt="Image 1" class="grid-image">
-                <div class="image-title"><span>🇨🇭 环苏黎世湖70KM骑行</span></div>
+                <div class="image-title"><span>🇨🇭 环苏黎世湖70km骑行</span></div>
             </div>
             <div class="grid-item">
                 <img src="images/sports/2.jpg" alt="Image 2" class="grid-image">
