--- a/cn-activities.html
+++ b/cn-activities.html
@@ -103,107 +103,6 @@
     }
 
 
-
-    .flex-container {
-      display: flex;
-      justify-content: space-between;
-      /* 或者可以使用 flex-start 来左对齐 */
-      align-items: center;
-      width: 100%;
-      flex-wrap: nowrap;
-      /* 防止元素换行 */
-      padding: 0;
-      /* 移除内边距 */
-      margin: 0;
-      /* 移除外边距 */
-      list-style: none;
-      /* 如果是列表项，移除列表样式 */
-    }
-
-    .flex-container>div,
-    .flex-container>a {
-      margin: 0;
-      /* 移除外边距 */
-      padding: 0;
-      /* 移除内边距 */
-      white-space: nowrap;
-      /* 防止内容换行 */
-    }
-
-    /* Mobile styles - hide .flex-container */
-    @media (max-width: 768px) {
-      .flex-container {
-        display: none;
-      }
-    }
-
-
-    .gallery-wrap {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    height: 40vh;
-     }
-
-    .item {
-      flex: 1;
-      height: 100%;
-      background-position: center;
-      background-size: cover;
-      background-repeat: none;
-      transition: flex 0.8s ease;
-      
-      &:hover{
-        flex: 7;
-      }
-    }
-
-    .item-1 {background-image: url(images/gallery/1.jpg);}
-    .item-2 {background-image: url(images/gallery/2.jpg);}
-    .item-3 {background-image: url(images/gallery/3.jpg);}
-    .item-4 {background-image: url(images/gallery/4.jpg);}
-    .item-5 {background-image: url(images/gallery/5.jpg);}
-    .item-6 {background-image: url(images/gallery/6.jpg);}
-    .item-7 {background-image: url(images/gallery/7.jpg);}
-    .item-8 {background-image: url(images/gallery/8.jpg);}
-    .item-9 {background-image: url(images/gallery/9.jpg);}
-    .item-10 {background-image: url(images/gallery/10.jpg);}
-
-
-
-  .image-container2 {
-	position: relative;
-	width: 100%;
-	height: 60vh;
-  }
-  
-  .image-text {
-	position: absolute;
-	top: 50.5vh;
-	left: 0;
-	width: 100%;
-	color: white; /* 根据背景图片选择合适的文字颜色 */
-	background: rgba(0, 0, 0, 0.332); /* 可选：添加半透明背景，以提高文字可读性 */
-	padding: 10px;
-	box-sizing: border-box;
-	text-align: center; /* 可选：居中文本 */
-	font-size: 1.3em; /* 可选：设置文字大小 */
-  }
-
-  .image-text-2 {
-	position: absolute;
-	top: 45.3vh;
-	left: 0;
-	width: 100%;
-	color: white; /* 根据背景图片选择合适的文字颜色 */
-	background: rgba(0, 0, 0, 0.332); /* 可选：添加半透明背景，以提高文字可读性 */
-	padding: 10px;
-	box-sizing: border-box;
-	text-align: center; /* 可选：居中文本 */
-	font-size: 1.1em; /* 可选：设置文字大小 */
-  }
-
-
 /* Sport Container */
 
 .three-col-grid {
@@ -219,11 +118,11 @@
 }
 
 .grid-image {
-    width: 100%;
+    width: 103%;
     height: 150px; /*统一图片高度*/
     object-fit: cover;
     display: block;
-    border: 2px solid #ccc;
+    border: 0px solid #ccc;
     border-radius: 5px;
     transition: transform 0.3s ease;
 }
@@ -237,6 +136,16 @@
     font-size: normal;
     color: #333;
 }
+
+    /* Mobile styles - hide .flex-container */
+    @media (max-width: 768px) {
+      .three-col-grid {
+        width: 100%;
+      }
+      .grid-image {
+        height: 110px;
+      }
+    }
 
   </style>
 
@@ -1020,7 +929,7 @@
             <div class="mySlides fade">
               <div class="numbertext"></div>
               <div class="image-container">
-              <img class="display-mobile" src="images/formal/4.jpg" style="width: 100%; height: 60vh; object-fit: cover;">
+              <img class="display-mobile" src="images/formal/4.1.jpg" style="width: 100%; height: 60vh; object-fit: cover;">
               <img class="hidden-mobile" src="images/formal/4.jpg" style="width: 100%; height: 55vh; object-fit: cover;">
               <div class="text"></div>
               <div class="text" style="display: none;" id="img-title-4">ETH博士毕业典礼 🇨🇭 瑞士苏黎世</div>
@@ -1029,7 +938,7 @@
             <div class="mySlides fade">
               <div class="numbertext"></div>
               <div class="image-container">
-              <img class="display-mobile" src="images/formal/5.jpg" style="width: 100%; height: 60vh; object-fit: cover;">
+              <img class="display-mobile" src="images/formal/5.1.jpg" style="width: 100%; height: 60vh; object-fit: cover;">
               <img class="hidden-mobile" src="images/formal/5.jpg" style="width: 100%; height: 55vh; object-fit: cover;">
               <div class="text"></div>
               <div class="text" style="display: none;" id="img-title-5">圣加仑国际经济论坛 🇨🇭 瑞士圣加仑</div>
@@ -1048,7 +957,7 @@
             <div class="mySlides fade">
               <div class="numbertext"></div>
               <div class="image-container">
-              <img class="display-mobile" src="images/formal/7.jpg" style="width: 100%; height: 60vh; object-fit: cover;">
+              <img class="display-mobile" src="images/formal/7.1.jpg" style="width: 100%; height: 60vh; object-fit: cover;">
               <img class="hidden-mobile" src="images/formal/7.jpg" style="width: 100%; height: 55vh; object-fit: cover;">
               <div class="text"></div>
               <div class="text" style="display: none;" id="img-title-7">欧洲核子中心CERN 🇨🇭 瑞士日内瓦</div>
@@ -1075,7 +984,7 @@
             <div class="mySlides fade">
               <div class="numbertext"></div>
               <div class="image-container">
-              <img class="display-mobile" src="images/formal/10.jpg" style="width: 100%; height: 60vh; object-fit: cover;">
+              <img class="display-mobile" src="images/formal/10.1.jpg" style="width: 100%; height: 60vh; object-fit: cover;">
               <img class="hidden-mobile" src="images/formal/10.jpg" style="width: 100%; height: 55vh; object-fit: cover;">
               <div class="text"></div>
               <div class="text" style="display: none;" id="img-title-10">国际燃料电池基础研发会议 🇫🇷 法国南特</div>
@@ -1093,7 +1002,7 @@
             <div class="mySlides fade">
               <div class="numbertext"></div>
               <div class="image-container">
-              <img class="display-mobile" src="images/formal/12.jpg" style="width: 100%; height: 60vh; object-fit: cover;">
+              <img class="display-mobile" src="images/formal/12.1.jpg" style="width: 100%; height: 60vh; object-fit: cover;">
               <img class="hidden-mobile" src="images/formal/12.jpg" style="width: 100%; height: 55vh; object-fit: cover;">
               <div class="text"></div>
               <div class="text" style="display: none;" id="img-title-12">国际电化学学会会议 🇮🇹 意大利博洛尼亚</div>
@@ -1139,7 +1048,7 @@
             <div class="mySlides fade">
               <div class="numbertext"></div>
               <div class="image-container">
-              <img class="display-mobile" src="images/formal/17.jpg" style="width: 100%; height: 60vh; object-fit: cover;">
+              <img class="display-mobile" src="images/formal/17.1.jpg" style="width: 100%; height: 60vh; object-fit: cover;">
               <img class="hidden-mobile" src="images/formal/17.jpg" style="width: 100%; height: 55vh; object-fit: cover;">
               <div class="text"></div>
               <div class="text" style="display: none;" id="img-title-17">卢森堡商会 🇱🇺 卢森堡</div>
