--- a/cn-research.html
+++ b/cn-research.html
@@ -489,7 +489,8 @@
                       <li style="width: 50%; box-sizing: border-box;"><a href="cn-activities.html#writing" style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 写作</small></a></li>
                       <li style="width: 50%; box-sizing: border-box;"><a href="cn-activities.html#visiting" style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 参访</small></a></li>
                       <li style="width: 50%; box-sizing: border-box;"><a href="cn-activities.html#travel" style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 旅行</small></a></li>
-                      <li style="width: 50%; box-sizing: border-box;"><a href="cn-activities.html#photography" style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 摄影</small></a></li>
+                      <li style="width: 50%; box-sizing: border-box;"><a href="cn-activities.html#photography">&nbsp;&nbsp;&nbsp;<small>• 摄影</small></a></li>
+                      <li style="width: 50%; box-sizing: border-box;"><a href="cn-activities.html#sports">&nbsp;&nbsp;&nbsp;<small>• 运动</small></a></li>
                     </div>          
                       
                     <li><a href="#contact"><small style="color: rgb(97, 97, 97);">▸ <strong>联系我</strong></small></a><br></li>
