--- a/cn-activities.html
+++ b/cn-activities.html
@@ -1539,15 +1539,15 @@
             <div class="three-col-grid">
               <div class="grid-item">
                 <img src="images/sports/3.jpg" alt="Image 1" class="grid-image">
-                <div class="image-title"><span>🇨🇭 环苏黎世湖70km骑行</span></div>
+                <div class="image-title"><span><img class="flag-icon" src="./images/wflags/ch.png" alt="Switzerland"> 环苏黎世湖70km骑行</span></div>
             </div>
             <div class="grid-item">
                 <img src="images/sports/2.jpg" alt="Image 2" class="grid-image">
-                <div class="image-title">🇭🇷 克罗地亚杜城Srđ山 (412m)</div>
+                <div class="image-title"><img class="flag-icon" src="./images/wflags/hr.png" alt="Croatia"> 克罗地亚杜城Srđ山 (412m)</div>
             </div>
             <div class="grid-item">
                 <img src="images/sports/4.jpg" alt="Image 3" class="grid-image">
-                <div class="image-title">🇩🇪 慕尼黑奥林匹克山 (565m)</div>
+                <div class="image-title"><img class="flag-icon" src="./images/wflags/de.png" alt="Germany"> 慕尼黑奥林匹克山 (565m)</div>
             </div>
           </div>
           </li>
@@ -1557,15 +1557,15 @@
             <div class="three-col-grid">
               <div class="grid-item">
                 <img src="images/sports/6.jpg" alt="Image 1" class="grid-image">
-                <div class="image-title"><span>🇨🇭布雷恩茨山脊线 (2350m) </span></div>
+                <div class="image-title"><span><img class="flag-icon" src="./images/wflags/ch.png" alt="Switzerland">布雷恩茨山脊线 (2350m) </span></div>
             </div>
             <div class="grid-item">
                 <img src="images/sports/7.jpg" alt="Image 2" class="grid-image">
-                <div class="image-title">🇪🇸 马略卡岛/天涯海角灯塔 (384m)</div>
+                <div class="image-title"><img class="flag-icon" src="./images/wflags/es.png" alt="Spain"> 马略卡岛/天涯海角灯塔 (384m)</div>
             </div>
             <div class="grid-item">
                 <img src="images/sports/9.jpg" alt="Image 3" class="grid-image">
-                <div class="image-title">🇨🇭 俯瞰阿莱奇冰川 (1905m)</div>
+                <div class="image-title"><img class="flag-icon" src="./images/wflags/ch.png" alt="Switzerland"> 俯瞰阿莱奇冰川 (1905m)</div>
             </div>
           </div>
           </li>
@@ -1575,15 +1575,15 @@
             <div class="three-col-grid">
               <div class="grid-item">
                 <img src="images/sports/1.jpg" alt="Image 1" class="grid-image">
-                <div class="image-title"><span>🇨🇭铁力士山冰屋搭建/夜宿 </span></div>
+                <div class="image-title"><span><img class="flag-icon" src="./images/wflags/ch.png" alt="Switzerland">铁力士山冰屋搭建/夜宿 </span></div>
             </div>
             <div class="grid-item">
                 <img src="images/sports/10.jpg" alt="Image 2" class="grid-image">
-                <div class="image-title">🇩🇪 慕尼黑啤酒节广场/攀岩</div>
+                <div class="image-title"><img class="flag-icon" src="./images/wflags/de.png" alt="Germany"> 慕尼黑啤酒节广场/攀岩</div>
             </div>
             <div class="grid-item">
                 <img src="images/sports/11.jpg" alt="Image 3" class="grid-image">
-                <div class="image-title">🇨🇭 瑞吉山/日落/堆雪人</div>
+                <div class="image-title"><img class="flag-icon" src="./images/wflags/ch.png" alt="Switzerland"> 瑞吉山/日落/堆雪人</div>
             </div>
           </div>
           </li>
