--- a/cn-activities.html
+++ b/cn-activities.html
@@ -1473,7 +1473,8 @@
             台湾、
             <img class="flag-icon" src="./images/wflags/ru.png" alt="Russia"> 俄罗斯、
             <img class="flag-icon" src="./images/wflags/tr.png" alt="Turkey"> 土耳其、
-            <img class="flag-icon" src="./images/wflags/th.png" alt="Thailand"> 泰国</li>
+            <img class="flag-icon" src="./images/wflags/th.png" alt="Thailand"> 泰国、
+            <img class="flag-icon" src="./images/wflags/ae.png" alt="UAE"> 阿联酋</li>
           <li><strong>欧洲</strong>：
             <img class="flag-icon" src="./images/wflags/al.png" alt="Albania"> 阿尔巴尼亚、
             <img class="flag-icon" src="./images/wflags/at.png" alt="Austria"> 奥地利、
