--- a/en-activities.html
+++ b/en-activities.html
@@ -413,8 +413,7 @@
       <p align="justify">
 
         <span class="display-mobile">Greetings, friends from <span id="location2"></span>! </br></br></span>
-        Dr. Hong Xu is a passionate Green Tech <strong>Researcher</strong>, e-Power <strong>Engineer</strong>,
-        and <strong>Analyst</strong> specializing in Energy Economics and Policy.
+        I am an avid traveler and photographer who enjoys writing articles, engaging in public speaking, and staying active through various sports.
       </p>
 
 
