--- a/en-resume.html
+++ b/en-resume.html
@@ -515,6 +515,32 @@
       <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
 
+      <div class="doc-section" id="industrial-experience">
+
+        <h3 style="display:inline-block">Industrial Experience</h3>
+
+        <ul class="square">
+
+          <!-- <li>2021-至今 | <strong>研发工程师, 燃料电池系统策略 </strong>
+            <div style="float: right"></div><br>
+            <strong><a href="https://www.freudenberg-eps.com/" target="_blank">德国 · 科德宝集团</a></strong> (动力系统)<br> -->
+
+          <li>2017-2019 | <strong>Co-author/Collaborator, Automotive Fuel Cell Materials </strong>
+            <div style="float: right"></div><br>
+            <strong><a href="https://www.toyota-europe.com/" target="_blank">Toyota Motor Europe</a></strong>, Belgium
+          <li>2015-2016 | <strong>Internship, Chip Failure Analysis</strong>
+            <div style="float: right"></div><br>
+            <strong><a href="http://infineon.com" target="_blank">Infineon Technologies</a></strong>, Germany<br>
+            <!--[<a href="https://unknown/files/Master_Thesis_LMU_TUM-Xu_Hong.pdf" target="_blank">Thesis</a>]-->
+
+        </ul>
+      </div>
+
+
+
+      <hr class="display-mobile" style="width:113%">
+      <hr class="hidden-mobile">
+
       <h3 class="hidden-mobile" style="display:inline-block">Doctoral Awards Ceremony</h3>
       <div class="video-container hidden-mobile" style="padding-bottom: 48.25%">
         <video controls poster="images/graduation_preview.png">
