--- a/cn-resume.html
+++ b/cn-resume.html
@@ -363,7 +363,7 @@
             style="width:62px;display:inline-block;color:inherit;margin-bottom:0px;"
             onchange="window.location.href=this.options [this.selectedIndex].value">
             <option value="cn.html" select>中文</option>
-            <option value="jp.html">日本語</option>
+            <option value="jp-resume.html">日本語</option>
             <option value="kr.html">한국어</option>
             <option value="de.html">Deutsch</option>
             <option value="en-resume.html">English</option>
@@ -445,7 +445,7 @@
         onchange="handleChange(this)">
     <option value="cn-resume.html" select>🇨🇳 中文(简体)</option>
     <option value="javascript:runFanTiJavaScript();">🇭🇰 中文(繁体)</option>
-            <option value="jp.html">🇯🇵 日本語</option>
+            <option value="jp-resume.html">🇯🇵 日本語</option>
             <option value="kr.html">🇰🇷 한국어</option>
             <option value="de.html">🇩🇪 Deutsch</option>
             <option value="en-resume.html">🇬🇧 English</option>
@@ -913,7 +913,7 @@
         <p><strong>有限游戏</strong>以<strong>取胜</strong>为目的，<strong>无限游戏</strong>以<strong>延续</strong>游戏为宗旨。<br><small>版权 ©
             2016-
             <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | 徐泓
-            <small>博士</small> | 更新: 2024年6月 <a href="https://www.sigmatraffic.com?ref=232975"></a>
+            <small>博士</small> | 更新: 2024年7月 <a href="https://www.sigmatraffic.com?ref=232975"></a>
           </small></p>
       </footer>
 
