--- a/cn-activities.html
+++ b/cn-activities.html
@@ -378,8 +378,8 @@
               alt="flag" style="height:23px;display:inline-block;top:7px;position:relative;"> 繁</a></span>&nbsp;<select id="languages" name="languages"
             style="width:62px;display:inline-block;color:inherit;margin-bottom:0px;"
             onchange="window.location.href=this.options [this.selectedIndex].value">
-            <option value="cn.html" select>中文</option>
-            <option value="jp.html">日本語</option>
+            <option value="cn-activities.html" select>中文</option>
+            <option value="jp-activities.html">日本語</option>
             <option value="kr.html">한국어</option>
             <option value="de.html">Deutsch</option>
             <option value="en-activities.html">English</option>
@@ -461,7 +461,7 @@
         onchange="handleChange(this)">
     <option value="cn-activities.html" select>🇨🇳 中文(简体)</option>
     <option value="javascript:runFanTiJavaScript();">🇭🇰 中文(繁体)</option>
-            <option value="jp.html">🇯🇵 日本語</option>
+            <option value="jp-activities.html">🇯🇵 日本語</option>
             <option value="kr.html">🇰🇷 한국어</option>
             <option value="de.html">🇩🇪 Deutsch</option>
             <option value="en-activities.html">🇬🇧 English</option>
