--- a/jp-activities.html
+++ b/jp-activities.html
@@ -339,7 +339,7 @@
                   class='blue'>アナリスト</span></a></li>
                   <p>____</p>
                   <li><a href="jp.html">紹介</a></li>
-                  <li><a href="jp-research.html">研究の進展</a></li>
+                  <li><a href="jp-research.html">研究進捗</a></li>
                   <li><a href="jp-resume.html">履歴</a></li>
                   <li><a href="jp-activities.html"><span style="color: rgb(253, 93, 7);">趣味 ⏴</span></a></li>
                   <li><a href="#">&nbsp;• 講演</a></li>
