--- a/jp-research.html
+++ b/jp-research.html
@@ -292,11 +292,11 @@
                   class='blue'>アナリスト</span></a></li>
                   <p>____</p>
                   <li><a href="jp.html">紹介</a></li>
-                  <li><a href="jp-research.html"><span style="color: rgb(253, 93, 7);">研究の進展 ⏴</span></a></li>
+                  <li><a href="jp-research.html"><span style="color: rgb(253, 93, 7);">研究進捗 ⏴</span></a></li>
                   <li><a href="#publications">&nbsp;• 出版物</a></li>
                   <li><a href="#patents">&nbsp;• 特許</a></li> 
                   <li><a href="#presentations">&nbsp;• 学術会議</a></li>
-                  <li><a href="#equity-research">&nbsp;• 株式調査</a></li>
+                  <li><a href="#equity-research">&nbsp;• 証券研究</a></li>
                   <li><a href="jp-resume.html">履歴</a></li>
                   <li><a href="jp-activities.html">趣味</a></li>
                   <p>____</p>
@@ -324,9 +324,9 @@
       <p class="hidden-mobile"></p>
       <h3 class="hidden-mobile">
         <span>
-          <ruby>研究の進展<rt><text style="color:rgb(255, 255, 255)">Kon‘ ni chi wa！</text></rt></ruby> <ruby>
+          <ruby>研究進捗<rt><text style="color:rgb(255, 255, 255)">Kon‘ ni chi wa！</text></rt></ruby> <ruby>
             <rt><text style="color:rgb(255, 255, 255)"></text> </rt>
-          </ruby><small><small><small>科学 / 業界</small></small> </small>
+          </ruby><small><small><small></small></small> </small>
         </span>
         <span style="float:right; font-family:verdana;margin-top:10px;">
           <img src="images/flag_jp.png" alt="flag" style="height:23px;display:inline-block;top:7px;position:relative;">
@@ -423,7 +423,7 @@
       </p>
       <div>
         <hr class="display-mobile" style="width:113%">
-      <h3 class="display-mobile">研究兴趣</h3>
+      <h3 class="display-mobile">研究進捗</h3>
       <p align="justify">
           学術界から産業界まで、<strong style="color: rgb(253, 93, 7);">クリーンで効率的なエネルギー</strong>と<strong style="color: rgb(253, 93, 7);">低炭素でインテリジェントな交通</strong>分野に注力し、分野横断的な<strong>研究関心</strong>を含む：
       </p>
@@ -509,7 +509,7 @@
       <div class="doc-section" id="publications">
         <h3>学術論文 <small><small>(引用数: <span id="citation-number-container">295+</span>)</small></small></h3>
         <ul class="square">
-          <li><strong>クリーンエネルギー技術 / 電気化学</strong></li>
+          <li><strong>新エネルギー技術 / 電気化学</strong></li>
         </ul>
         <ol>
           <li>
@@ -576,7 +576,7 @@
 
 
         <ul class="square">
-          <li><strong>コンピュテーショナルイメージング / ディープラーニング</strong></li>
+          <li><strong>コンピュータイメージング / ディープラーニング</strong></li>
         </ul>
 
         <ol>
@@ -952,7 +952,7 @@
 
 
       <div class="doc-section" id="equity-research">
-        <h3>株式調査</h3>
+        <h3>証券研究</h3>
         <ul class="square">
             <li><strong>産業マクロ研究 (大中華地域):</strong><br>
                 2022 | <strong>新エネルギー産業</strong>: 双カーボン政策下の中国新エネルギー産業の起業ドライブ力 <br>
