--- a/jp-resume.html
+++ b/jp-resume.html
@@ -292,7 +292,7 @@
                   class='blue'>アナリスト</span></a></li>
                   <p>____</p>
                   <li><a href="jp.html">紹介</a></li>
-                  <li><a href="jp-research.html">研究の進展</a></li>
+                  <li><a href="jp-research.html">研究進捗</a></li>
                   <li><a href="jp-resume.html"><span style="color: rgb(253, 93, 7);">履歴 ⏴</span></a></li>
                   <li><a href="#education">&nbsp;• 学歴</a></li>
                   <li><a href="#academic-experience">&nbsp;• 研究経歴</a></li> 
