--- a/jp.html
+++ b/jp.html
@@ -296,7 +296,7 @@
                   class='blue'>アナリスト</span></a></li>
                   <p>____</p>
                   <li><a href="jp.html"><span style="color: rgb(253, 93, 7);">紹介 ⏴</span></a></li>
-                  <li><a href="jp-research.html">研究の進展</a></li>
+                  <li><a href="jp-research.html">研究進捗</a></li>
                   <li><a href="jp-resume.html">履歴</a></li>
                   <li><a href="jp-activities.html">趣味</a></li>
                   <li><a href="#contact">連絡先</a></li>
