--- a/jp-research.html
+++ b/jp-research.html
@@ -959,14 +959,14 @@
                 2020 | <strong>新材料産業</strong>: 半導体材料シリーズその四：5Gを推進する光通信産業チェーン、ホスフィド化インジウム材料は準備が整っている<br>
                 <hr>
             <li><strong>一次市場研究 (AからDラウンド資金調達企業):</strong><br>
-                2021 | <strong>驭势科技</strong>: テクノロジー先駆者シリーズレポート、驭势科技: 多シーン自動運転ソリューションプロバイダー<br>
-                2021 | <strong>芯驰科技</strong>: テクノロジー先駆者シリーズレポート、芯驰科技: スマートカー自主IPチッププロバイダー<br>
+                2021 | <strong>驭势科技</strong>: テクノロジー先駆者シリーズレポート: 多シーン自動運転ソリューションプロバイダー<br>
+                2021 | <strong>芯驰科技</strong>: テクノロジー先駆者シリーズレポート: スマートカー自主IPチッププロバイダー<br>
                 2021 | <strong>西安奕斯伟</strong>: 西安奕斯伟研究分析レポート<br>
                 <hr>
-            <li><strong>二次市場研究 (A股&米国株上場企業):</strong><br>
+            <li><strong>二次市場研究 (中国A株&米国株上場企業):</strong><br>
                 2021 | <strong>沪硅産業</strong> (688126.SH): 大硅片のリーダーがチップ国産代替を先導する（初回カバーレポート）<br>
-                2021 | <strong>CREE</strong> (NASDAQ:CREE): テクノロジー先駆者シリーズレポート、CREE: グローバルパワー/RFデバイスおよびLEDプロバイダー（米国株）<br>
-                2021 | <strong>經纬恒潤</strong> (688326.SH): テクノロジー先駆者シリーズレポート、經纬恒潤: 自動車電子技術システムサービスプロバイダー<br>
+                2021 | <strong>CREE</strong> (NASDAQ:CREE): テクノロジー先駆者シリーズレポート: グローバルパワー/RFデバイスおよびLEDプロバイダー（米国株）<br>
+                2021 | <strong>經纬恒潤</strong> (688326.SH): テクノロジー先駆者シリーズレポート: 自動車電子技術システムサービスプロバイダー<br>
                 2020 | <strong>天科合達</strong> (870013.OC): 国内トップSiCチップ製造業者<br>
                 2020 | <strong>立昂微</strong> (605358.SH): 国産代替市場の拡大、大硅片の産業化が目前に<br>
                 2020 | <strong>国瓷材料</strong> (300285.SZ): 歯科用セラミック材料産業、ジルコニア材料の好調な動向<br>
@@ -1005,7 +1005,7 @@
         <h3>私に連絡して</h3>
         <ul class="square">
           <li><strong>メール</strong>: <a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span class='blue'>h.xu
-                [at] tum.de</span></a><br />何か協力やリクエストがある場合は、お気軽にご連絡ください :- )</li>
+                [at] tum.de</span></a><br /></li>
           <li><strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"
               target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a><br /></li>
           <li><strong>グーグル学者</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
