--- a/cn.html
+++ b/cn.html
@@ -153,18 +153,20 @@
       }
     }
 
-    async function displayCountryName() {
+    async function displayCountryInfo() {
       const countries = await fetchCountries();
       const response = await fetch('https://ipinfo.io/json?token=228a7bb192c4fc');
       const data = await response.json();
-      const countryCode = data.country;
+      const countryCode = data.country.toLowerCase();
       const language = 'chinese'; // 更改为您想要显示的语言
-      const countryName = getCountryNameByCode(countries, countryCode, language);
+      const countryName = getCountryNameByCode(countries, countryCode.toUpperCase(), language);
+
       document.getElementById("location").textContent = countryName;
-      document.getElementById("location2").textContent = countryName;
+      document.getElementById("country-flag").src = `./images/wflags/${countryCode}.png`;
+      document.getElementById("country-flag").alt = countryName;
     }
 
-    document.addEventListener('DOMContentLoaded', displayCountryName);
+    document.addEventListener('DOMContentLoaded', displayCountryInfo);
   </script>
 
 </head>
@@ -324,7 +326,7 @@
       <h3 class="hidden-mobile">
         <span><ruby>嗨，你好!<rt><text style="color:rgb(255, 255, 255)">Hi，Nǐ Hǎo！</text></rt></ruby> <ruby>
             <rt><text style="color:rgb(255, 255, 255)"></text></rt>
-          </ruby> <small><small><small>欢迎来自<span id="location"></span>的朋友 :-）</small></small></small>
+          </ruby> <small><small><small>欢迎来自<span id="location"></span> <img id="country-flag" class="flag-icon" src="" alt=""> 的朋友 :-）</small></small></small>
 
         </span>
 
