--- a/cn.html
+++ b/cn.html
@@ -326,7 +326,7 @@
       <h3 class="hidden-mobile">
         <span><ruby>嗨，你好!<rt><text style="color:rgb(255, 255, 255)">Hi，Nǐ Hǎo！</text></rt></ruby> <ruby>
             <rt><text style="color:rgb(255, 255, 255)"></text></rt>
-          </ruby> <small><small><small>欢迎来自<span id="location"></span> <img id="country-flag" class="flag-icon" src="" alt=""> 的朋友 :-）</small></small></small>
+          </ruby> <small><small><small>欢迎来自<span id="location">地球</span>的朋友 :-）</small></small></small>
 
         </span>
 
@@ -460,7 +460,7 @@
         </p>
 
         <p style="text-align:left;">
-          PEK (NǐHǎo)-> CDG (Bonjour)-> HAM (MoinMoin)-> MUC (Servus)-> ZRH (Grüezi)-> LHR (Hello)-> ?
+          PEK (NǐHǎo)-> CDG (Bonjour)-> HAM (MoinMoin)-> MUC (Servus)-> ZRH (Grüezi)-> LHR (Hello)-> <img id="country-flag" class="flag-icon" src="" alt=""> ?
           </span>
         </p>
         <!---
