--- a/en.html
+++ b/en.html
@@ -154,11 +154,13 @@
       const countries = await fetchCountries();
       const response = await fetch('https://ipinfo.io/json?token=228a7bb192c4fc');
       const data = await response.json();
-      const countryCode = data.country;
+      const countryCode = data.country.toLowerCase();
       const language = 'english'; // 更改为您想要显示的语言
-      const countryName = getCountryNameByCode(countries, countryCode, language);
-      document.getElementById("location").textContent = countryName;
+      const countryName = getCountryNameByCode(countries, countryCode.toUpperCase(), language);
       document.getElementById("location2").textContent = countryName;
+      document.getElementById("location").textContent = countryName;
+      document.getElementById("country-flag").src = `./images/wflags/${countryCode}.png`;
+      document.getElementById("country-flag").alt = countryName;
     }
 
     document.addEventListener('DOMContentLoaded', displayCountryName);
@@ -365,8 +367,7 @@
 
 
       <p class="hidden-mobile"></p>
-      <h3 class="hidden-mobile">Hey, Welcome! <small><small><small>Friends from <span id="location"></span>
-              :-)</small></small> </small>
+      <h3 class="hidden-mobile">Hey, Welcome! <small><small><small>Friends from <span id="location"></span> :-)</small></small> </small>
         <span style="float:right;font-family:verdana;">
           <img src="images/flag_us.png" alt="flag" style="height:23px;display:inline-block;top:7px;position:relative;">
           <img src="images/flag_uk.png" alt="flag" style="height:23px;display:inline-block;top:7px;position:relative;">
@@ -494,7 +495,7 @@
 
       <p style="text-align:left;">
 
-        PEK (NǐHǎo)-> CDG (Bonjour)-> HAM (MoinMoin)-> MUC (Servus)-> ZRH (Grüezi)-> NEXT??
+        PEK (NǐHǎo)-> CDG (Bonjour)-> HAM (MoinMoin)-> MUC (Servus)-> ZRH (Grüezi)-> <img id="country-flag" class="flag-icon" src="" alt=""> ?
 
       </p>
 
