--- a/jp.html
+++ b/jp.html
@@ -155,9 +155,11 @@
       const data = await response.json();
       const countryCode = data.country;
       const language = 'japanese'; // 更改为您想要显示的语言
-      const countryName = getCountryNameByCode(countries, countryCode, language);
-      document.getElementById("location").textContent = countryName;
+      const countryName = getCountryNameByCode(countries, countryCode.toUpperCase(), language);
       document.getElementById("location2").textContent = countryName;
+      document.getElementById("location").textContent = countryName;
+      document.getElementById("country-flag").src = `./images/wflags/${countryCode}.png`;
+      document.getElementById("country-flag").alt = countryName;
     }
 
     document.addEventListener('DOMContentLoaded', displayCountryName);
@@ -500,7 +502,7 @@
       </p>
       
       <p style="text-align:left;">
-        PEK (NǐHǎo)-> CDG (Bonjour)-> HAM (MoinMoin)-> MUC (Servus)-> ZRH (Grüezi)-> NEXT?
+        PEK (NǐHǎo)-> CDG (Bonjour)-> HAM (MoinMoin)-> MUC (Servus)-> ZRH (Grüezi)->  <img id="country-flag" class="flag-icon" src="" alt=""> ?
         </span>
       </p>
       <!---
